Improve tooltip component - It gives the tooltip component the ability to render an image when passed as props - It also prevents the tooltip to overflow its container

--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -1,17 +1,28 @@
 :host {
   position: absolute;
   // Needed to position the slider tooltip on top of subtitles
-  z-index: 1;
+  // and menus
+  z-index: 2;
   // Default tooltip position (Top-center + 10 px margin)
   left: 50%;
   bottom: calc(100% + 10px);
 }
 
 .tooltip {
-  background-color: rgba(var(--vp-menu-color-rgb), 0.9);
-  padding: 0.4em;
+  background-color: rgb(var(--vp-menu-color-rgb));
   font-size: 0.9em;
-  border-radius: 5px;
+  text-align: center;
+
+  &__content {
+    margin: 0;
+    padding: 0.4em;
+  }
+
+  &__image {
+    max-height: 100px;
+    padding: 5px;
+    display: block;
+  }
 
   :after {
     content: "";
@@ -23,10 +34,6 @@
     height: 0;
     border-left: 0.4em solid transparent;
     border-right: 0.4em solid transparent;
-    border-top: 0.4em solid rgba(var(--vp-menu-color-rgb), 0.9);
-  }
-
-  p {
-    margin: 0;
+    border-top: 0.4em solid rgb(var(--vp-menu-color-rgb));
   }
 }
